add about section

--- a/index.html
+++ b/index.html
@@ -155,5 +155,52 @@
         </div>
       </section>
       <!-- End works -->
+
+      <!-- Start About -->
+      <section class="about">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="about-img">
+                <img src="assets/img/about-banner.png" alt="" srcset="">
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="content">
+                <div class="title">
+                  <span>ABOUT US</span>
+                  <h2>We provide best gardening & Landscaping services</h2>
+                </div>
+                <div class="description">
+                  <p>Credibly reintermediate backend ideas for cross-platform models. Continually reintermediate integrated processes through technically sound intellectual capital holistically foster superior methodologies.
+                  </p>
+                  <div class="row">
+                    <div class="col-lg">
+                      <ul>
+                        <li> <i class="fas fa-check"></i>Garden Maintenance</li>
+                        <li> <i class="fas fa-check"></i>Paths, Patios and Driveways</li>
+                        <li> <i class="fas fa-check"></i>Pergolas and Timber Structures</li>
+                        <li> <i class="fas fa-check"></i>Trained and qualified staff</li>
+                        <li> <i class="fas fa-check"></i>Individual selection of plants</li>
+                      </ul>
+                    </div>
+                    <div class="col-lg">
+                      <ul>
+                        <li> <i class="fas fa-check"></i>Jet Washing</li>
+                        <li> <i class="fas fa-check"></i>Ground Levelling</li>
+                        <li> <i class="fas fa-check"></i>Winter Services</li>
+                        <li> <i class="fas fa-check"></i>Excellent design</li>
+                        <li> <i class="fas fa-check"></i>Available 24/7</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End About -->
+      
 </body>
 </html>
