--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                         <img src="assets/img/gg-550x570.jpg" alt="" srcset="">
                       </div>
                       <div class="content">
-                        <h4><a>Eldorado Green House</a></h4>
+                        <h4><a>Rubbish Removal</a></h4>
                         <p><a href="">illustration</a></p>
                       </div>
                     </div>
@@ -418,7 +418,18 @@
                   <div class="owl-item">
                     <div class="box">
                       <div class="box-img">
-                        <img src="assets/img/gg-550x570.jpg" alt="" srcset="">
+                        <img src="assets/img/2-550x570.jpg" alt="" srcset="">
+                      </div>
+                      <div class="content">
+                        <h4><a>Growing plants</a></h4>
+                        <p><a href="">illustration</a></p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="owl-item">
+                    <div class="box">
+                      <div class="box-img">
+                        <img src="assets/img/f-550x570.jpg" alt="" srcset="">
                       </div>
                       <div class="content">
                         <h4><a>Eldorado Green House</a></h4>
@@ -432,7 +443,7 @@
                         <img src="assets/img/gg-550x570.jpg" alt="" srcset="">
                       </div>
                       <div class="content">
-                        <h4><a>Eldorado Green House</a></h4>
+                        <h4><a>Rubbish Removal</a></h4>
                         <p><a href="">illustration</a></p>
                       </div>
                     </div>
@@ -440,10 +451,10 @@
                   <div class="owl-item">
                     <div class="box">
                       <div class="box-img">
-                        <img src="assets/img/gg-550x570.jpg" alt="" srcset="">
+                        <img src="assets/img/2-550x570.jpg" alt="" srcset="">
                       </div>
                       <div class="content">
-                        <h4><a>Eldorado Green House</a></h4>
+                        <h4><a>Growing plants</a></h4>
                         <p><a href="">illustration</a></p>
                       </div>
                     </div>
@@ -451,18 +462,7 @@
                   <div class="owl-item">
                     <div class="box">
                       <div class="box-img">
-                        <img src="assets/img/gg-550x570.jpg" alt="" srcset="">
-                      </div>
-                      <div class="content">
-                        <h4><a>Eldorado Green House</a></h4>
-                        <p><a href="">illustration</a></p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="owl-item">
-                    <div class="box">
-                      <div class="box-img">
-                        <img src="assets/img/gg-550x570.jpg" alt="" srcset="">
+                        <img src="assets/img/f-550x570.jpg" alt="" srcset="">
                       </div>
                       <div class="content">
                         <h4><a>Eldorado Green House</a></h4>
