add request section

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div>
             <div class="col-lg-6">
               <div class="content">
-                <div class="title">
+                <div class="content-title">
                   <span>ABOUT US</span>
                   <h2>We provide best gardening & Landscaping services</h2>
                 </div>
@@ -395,6 +395,7 @@
         
        </section>
       <!-- End service -->
+       <!-- start project -->
       <section class="project">
         <div class="container-fluid">
           <div class="title-center">
@@ -476,6 +477,41 @@
         </div>
         </div>
       </section>
+       <!-- End project -->
+       <section class="request">
+         <div class="container">
+           <div class="row">
+             <div class="img-box col-md-6">
+             <div class="request-img">
+               <img src="assets/img/request.png" alt="" srcset="">
+             </div>
+             </div>
+             <div class="desc col-md-5 m-auto">
+              <div class="title">
+                <span>FREE ESTIMATION</span>
+                <h2>Request a Quote</h2>
+              </div>
+              <div class="form">
+                <form>
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Name">
+                  </div>
+                  <div class="form-group">
+                    <input type="email" class="form-control" placeholder="E-Mail">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Phone Number">
+                  </div>
+                  <div class="form-group">
+                    <textarea class="form-control" cols="30" rows="5" placeholder=" Your message Here"></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-nav">Submit</button>
+                </form>
+              </div>
+             </div>
+           </div>
+         </div>
+       </section>
 
 </body>
 </html>
