--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         
        </section>
       <!-- End service -->
-       <!-- start project -->
+      <!-- start project -->
       <section class="project">
         <div class="container-fluid">
           <div class="title-center">
@@ -477,7 +477,8 @@
         </div>
         </div>
       </section>
-       <!-- End project -->
+      <!-- End project -->
+      <!-- start request -->
        <section class="request">
          <div class="container">
            <div class="row">
@@ -512,6 +513,93 @@
            </div>
          </div>
        </section>
+      <!-- End request -->
+      <section class="team">
+        <div class="container-fluid">
+          <div class="title-center">
+            <span>TEAM MEMBERS</span>
+            <h2>Our Expert Gardener</h2>
+          </div>
+          <div class="owl-carousel owl-theme owl-loaded">
+            <div class="owl-stage-outer">
+                <div class="owl-stage">
+                    <div class="owl-item">
+                      <div class="team-item">
+                        <div class="team-img">
+                          <img src="assets/img/team_1.jpg" alt="" srcset="">
+                        </div>
+                        <div class="desc">
+                          <a href="">Lisa Resnick</a>
+                          <p>Gardenist</p>
+                          <div class="social-icon">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="owl-item">
+                      <div class="team-item">
+                        <div class="team-img">
+                          <img src="assets/img/team_2.jpg" alt="" srcset="">
+                        </div>
+                        <div class="desc">
+                          <a href="">Lisa Resnick</a>
+                          <p>Gardenist</p>
+                          <div class="social-icon">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="owl-item">
+                      <div class="team-item">
+                        <div class="team-img">
+                          <img src="assets/img/team_3.jpg" alt="" srcset="">
+                        </div>
+                        <div class="desc">
+                          <a href="">Lisa Resnick</a>
+                          <p>Gardenist</p>
+                          <div class="social-icon">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="owl-item">
+                      <div class="team-item">
+                        <div class="team-img">
+                          <img src="assets/img/team_4.jpg" alt="" srcset="">
+                        </div>
+                        <div class="desc">
+                          <a href="">Lisa Resnick</a>
+                          <p>Gardenist</p>
+                          <div class="social-icon">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+      </section>
+
 
 </body>
 </html>
