add tastimonials section and fix works section and add new img

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <section class="Works">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-lg-3 col-md-6 col-12">
+            <div class="col-xl-3 col-md-6 col-12">
               <div class="card">
                 <img src="assets/img/1.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -124,7 +124,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-12">
+            <div class="col-xl-3 col-md-6 col-12">
               <div class="card">
                 <img src="assets/img/2.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -134,7 +134,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-12">
+            <div class="col-xl-3 col-md-6 col-12">
               <div class="card">
                 <img src="assets/img/3.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -144,7 +144,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-12">
+            <div class="col-xl-3 col-md-6 col-12">
               <div class="card">
                 <img src="assets/img/4.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -514,6 +514,7 @@
          </div>
        </section>
       <!-- End request -->
+      <!-- start team -->
       <section class="team">
         <div class="container-fluid">
           <div class="title-center">
@@ -599,7 +600,64 @@
             </div>
         </div>
       </section>
-
+      <!-- End team -->
+      <section class="tastimonials">
+        <div class="container">
+          <div class="owl-carousel owl-theme owl-loaded">
+            <div class="owl-stage-outer">
+                <div class="owl-stage">
+                    <div class="owl-item">
+                      <div class="tastimonials-item">
+                        <div class="tastimonials-img">
+                          <img src="assets/img/tastimonials_3.jpg" alt="" srcset="">
+                        </div>
+                        <p> The owners of a corporation have limited liability and the business has a separate legal personality from its owners. Corporations can be either government-owned or privately owned. </p>
+                        <div class="tastimonials-content">
+                          <h4>Mike Carson</h4>
+                          <span>Founder</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="owl-item">
+                      <div class="tastimonials-item">
+                        <div class="tastimonials-img">
+                          <img src="assets/img/tastimonials_1-300x300.jpg" alt="" srcset="">
+                        </div>
+                        <p> The owners of a corporation have limited liability and the business has a separate legal personality from its owners. Corporations can be either government-owned or privately owned. </p>
+                        <div class="tastimonials-content">
+                          <h4>Sarah Smith</h4>
+                          <span>Manager</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="owl-item">
+                      <div class="tastimonials-item">
+                        <div class="tastimonials-img">
+                          <img src="assets/img/tastimonials_2.jpg" alt="" srcset="">
+                        </div>
+                        <p> The owners of a corporation have limited liability and the business has a separate legal personality from its owners. Corporations can be either government-owned or privately owned. </p>
+                        <div class="tastimonials-content">
+                          <h4>Mike Carson</h4>
+                          <span>Designer</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="owl-item">
+                      <div class="tastimonials-item">
+                        <div class="tastimonials-img">
+                          <img src="assets/img/tastimonials_4.jpg" alt="" srcset="">
+                        </div>
+                        <p> The owners of a corporation have limited liability and the business has a separate legal personality from its owners. Corporations can be either government-owned or privately owned. </p>
+                        <div class="tastimonials-content">
+                          <h4>Mike Carson</h4>
+                          <span>Founder</span>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </section>
 
 </body>
 </html>
