add blog section

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <script src="assets/js/external/jquery-3.6.0.min.js" defer></script>
     <script src="assets/js/external/bootstrap.bundle.min.js" defer></script>
-    <script src="assets/js/external/multi-animated-counter.js"defer></script>
-    <script src="assets/js/external/owl.carousel.min.js"defer></script>
+    <script src="assets/js/external/multi-animated-counter.js" defer></script>
+    <script src="assets/js/external/owl.carousel.min.js" defer></script>
     <script src="assets/js/app.js" defer></script>
     <title>planteo</title>
 </head>
@@ -601,6 +601,7 @@
         </div>
       </section>
       <!-- End team -->
+      <!-- End tastimonials -->
       <section class="tastimonials">
         <div class="container">
           <div class="owl-carousel owl-theme owl-loaded">
@@ -656,8 +657,113 @@
                     </div>
                 </div>
             </div>
+            </div>
         </div>
       </section>
+      <!-- End tastimonials -->
 
+      <section class="blog">
+        <div class="container-fluid">
+          <div class="title-center">
+            <span>Blog</span>
+            <h2>Our Latest Blog</h2>
+          </div>
+          <div class="owl-carousel owl-theme owl-loaded">
+            <div class="owl-stage-outer">
+                <div class="owl-stage">
+                    <div class="owl-item">
+                      <div class="blog-item">
+                        <div class="blog-img-box">
+                          <img src="assets/img/post-1.jpg" alt="" srcset="">
+                          <div class="date-box">
+                            <span class="date-number">19</span>
+                            <span class="date-month">Nov</span>
+                          </div>
+                        </div>
+                        <div class="blog-content">
+                         <h3><a href="#">Spring Lawn Care Tips</a></h3>
+                          <p>We denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of...</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="owl-item">
+                      <div class="blog-item">
+                        <div class="blog-img-box">
+                          <img src="assets/img/post-2.jpg" alt="" srcset="">
+                          <div class="date-box">
+                            <span class="date-number">19</span>
+                            <span class="date-month">Nov</span>
+                          </div>
+                        </div>
+                        <div class="blog-content">
+                         <h3><a href="#">Spring Lawn Care Tips</a></h3>
+                          <p>We denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of...</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="owl-item">
+                      <div class="blog-item">
+                        <div class="blog-img-box">
+                          <img src="assets/img/post-3.jpg" alt="" srcset="">
+                          <div class="date-box">
+                            <span class="date-number">19</span>
+                            <span class="date-month">Nov</span>
+                          </div>
+                        </div>
+                        <div class="blog-content">
+                         <h3><a href="#">Spring Lawn Care Tips</a></h3>
+                          <p>We denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of...</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="owl-item">
+                      <div class="blog-item">
+                        <div class="blog-img-box">
+                          <img src="assets/img/post_1.jpg" alt="" srcset="">
+                          <div class="date-box">
+                            <span class="date-number">19</span>
+                            <span class="date-month">Nov</span>
+                          </div>
+                        </div>
+                        <div class="blog-content">
+                         <h3><a href="#">Spring Lawn Care Tips</a></h3>
+                          <p>We denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of...</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="owl-item">
+                      <div class="blog-item">
+                        <div class="blog-img-box">
+                          <img src="assets/img/post_2.jpg" alt="" srcset="">
+                          <div class="date-box">
+                            <span class="date-number">19</span>
+                            <span class="date-month">Nov</span>
+                          </div>
+                        </div>
+                        <div class="blog-content">
+                         <h3><a href="#">Spring Lawn Care Tips</a></h3>
+                          <p>We denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of...</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="owl-item">
+                      <div class="blog-item">
+                        <div class="blog-img-box">
+                          <img src="assets/img/post_6-768x512.jpg" alt="" srcset="">
+                          <div class="date-box">
+                            <span class="date-number">19</span>
+                            <span class="date-month">Nov</span>
+                          </div>
+                        </div>
+                        <div class="blog-content">
+                         <h3><a href="#">Spring Lawn Care Tips</a></h3>
+                          <p>We denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of...</p>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </section>
 </body>
 </html>
