modify img in services section

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     </div>
                   </div>
                   <div class="box-img col-md-6 col-12">
-                    <img src="assets/img/4.png" alt="" srcset="">
+                    <img src="assets/img/ser_1.png" alt="" srcset="">
                   </div>
                 </div>
               </div>
