--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
             <div class="col-xl-3 col-md-6 col-12">
               <div class="card">
-                <img src="assets/img/4.png" class="card-img-top" alt="...">
+                <img src="assets/img/1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Planning Your Garden</h5>
                   <p class="card-text">  Duis eleifend molestie leo, at mollis eros rutrum sit amet.</p>
@@ -765,7 +765,8 @@
             </div>
         </div>
       </section>
-       <!-- end blog -->
+      <!-- end blog -->
+      <!-- start blog -->
        <section class="brand">
          <div class="container-fluid">
           <div class="owl-carousel owl-theme owl-loaded">
@@ -905,5 +906,113 @@
             </div>
          </div>
        </section>
+       <!-- end blog -->
+      <!-- start footer -->
+       <footer>
+         <div class="footer-top">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-3 col-12">
+                <div class="logo-img">
+                    <img src="assets/img/footer-logo.png" alt="" srcset="">
+                </div>
+                <div class="social-icon">
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                </div>
+              </div>
+              <div class="col-lg-3  col-12"">
+                <div class="title">
+                  <h2>OPENING HOURS</h2>
+                </div>
+                <div class="col-lg">
+                  <ul>
+                    <li> <i class="fas fa-check"></i>Garden Maintenance</li>
+                    <li> <i class="fas fa-check"></i>Paths, Patios and Driveways</li>
+                    <li> <i class="fas fa-check"></i>Pergolas and Timber Structures</li>
+                    <li> <i class="fas fa-check"></i>Trained and qualified staff</li>
+                    <li> <i class="fas fa-check"></i>Individual selection of plants</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-lg-3  col-12"">
+                <div class="title">
+                  <h2>LATEST BLOG POSTS</h2>
+                </div>
+                <div class="col-lg">
+                  <ul>
+                    <div class="card " >
+                      <div class="row no-gutters">
+                        <div class="col-md-4">
+                          <div class="card-img">
+                            <img src="assets/img/post-1.jpg" alt="...">
+                          </div>
+                          
+                        </div>
+                        <div class="col-md-8">
+                          <div class="card-body">
+                            <h5 class="card-title">Spring Lawn Care Tips</h5>
+                            <p class="card-text"><i class="far fa-clock"></i> November 19, 2018</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card " >
+                      <div class="row no-gutters">
+                        <div class="col-md-4">
+                          <div class="card-img">
+                            <img src="assets/img/post-1.jpg" alt="...">
+                          </div>
+                        </div>
+                        <div class="col-md-8">
+                          <div class="card-body">
+                            <h5 class="card-title">Spring Lawn Care Tips</h5>
+                            <p class="card-text"><i class="far fa-clock"></i> November 19, 2018</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card " >
+                      <div class="row no-gutters">
+                        <div class="col-md-4">
+                          <div class="card-img">
+                            <img src="assets/img/post-1.jpg" alt="...">
+                          </div>
+                        </div>
+                        <div class="col-md-8">
+                          <div class="card-body">
+                            <h5 class="card-title">Spring Lawn Care Tips</h5>
+                            <p class="card-text"><i class="far fa-clock"></i> November 19, 2018</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-lg-3  col-12"">
+                <div class="title">
+                  <h2>NEWSLETTER</h2>
+                </div>
+                <div class="col-lg">
+                  <p>Awesome business theme for your startup or grow-up business. This theme will help you organizing your site without any technical skills.</p>
+                  <form>
+                    <div class="form-group">
+                      <input type="email" class="form-control" placeholder="Enter Your Email">
+                      <button type="submit" class="btn btn-form"><i class="fas fa-arrow-right"></i></button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+         </div>
+        <div class="footer-bottom">
+          <p>© 2019 Gardenio. All Rights Reserved. Designed &amp; Developed By <a href="https://www.rstheme.com" target="_blank">RSTheme</a></p>
+        </div>
+       </footer>
+       <!-- end footer -->
 </body>
 </html>
