modfiy footer in different screen

--- a/index.html
+++ b/index.html
@@ -928,12 +928,12 @@
                   <h2>OPENING HOURS</h2>
                 </div>
                 <div class="col-lg">
-                  <ul>
-                    <li> <i class="fas fa-check"></i>Garden Maintenance</li>
-                    <li> <i class="fas fa-check"></i>Paths, Patios and Driveways</li>
-                    <li> <i class="fas fa-check"></i>Pergolas and Timber Structures</li>
-                    <li> <i class="fas fa-check"></i>Trained and qualified staff</li>
-                    <li> <i class="fas fa-check"></i>Individual selection of plants</li>
+                  <ul div="row">
+                    <li class="col-12"> <i class="fas fa-check"></i>Garden Maintenance</li>
+                    <li class="col-12"> <i class="fas fa-check"></i>Paths, Patios and Driveways</li>
+                    <li class="col-12"> <i class="fas fa-check"></i>Pergolas and Timber Structures</li>
+                    <li class="col-12"> <i class="fas fa-check"></i>Trained and qualified staff</li>
+                    <li class="col-12"> <i class="fas fa-check"></i>Individual selection of plants</li>
                   </ul>
                 </div>
               </div>
@@ -945,13 +945,12 @@
                   <ul>
                     <div class="card " >
                       <div class="row no-gutters">
-                        <div class="col-md-4">
+                        <div class="col-4">
                           <div class="card-img">
                             <img src="assets/img/post-1.jpg" alt="...">
                           </div>
-                          
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-8 col-6">
                           <div class="card-body">
                             <h5 class="card-title">Spring Lawn Care Tips</h5>
                             <p class="card-text"><i class="far fa-clock"></i> November 19, 2018</p>
@@ -961,12 +960,12 @@
                     </div>
                     <div class="card " >
                       <div class="row no-gutters">
-                        <div class="col-md-4">
+                        <div class="col-4">
                           <div class="card-img">
                             <img src="assets/img/post-1.jpg" alt="...">
                           </div>
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-8 col-6">
                           <div class="card-body">
                             <h5 class="card-title">Spring Lawn Care Tips</h5>
                             <p class="card-text"><i class="far fa-clock"></i> November 19, 2018</p>
@@ -976,12 +975,12 @@
                     </div>
                     <div class="card " >
                       <div class="row no-gutters">
-                        <div class="col-md-4">
+                        <div class="col-4">
                           <div class="card-img">
                             <img src="assets/img/post-1.jpg" alt="...">
                           </div>
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-8 col-6">
                           <div class="card-body">
                             <h5 class="card-title">Spring Lawn Care Tips</h5>
                             <p class="card-text"><i class="far fa-clock"></i> November 19, 2018</p>
