--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
     <title>planteo</title>
 </head>
 <body>
+    <div class="lodaingPage">
+      <div class="spinner">
+        <div class="double-bounce1"></div>
+        <div class="double-bounce2"></div>
+      </div>
+    </div>
     <!--Start Nav  -->
-    <nav class="navbar navbar-expand-lg ">
+      <nav class="navbar navbar-expand-lg ">
         <a class="navbar-brand" href="#">
             <img src="assets/img/logo-dark.png" alt="" srcset="">
         </a>
@@ -80,11 +86,9 @@
             <a href="#"><i class="fab fa-facebook-f"></i></a>
           </div>
         </div>
-        <button type="button" class="btn btn-nav d-none d-lg-block">GET A QUOTE</button>
+        <button type="button" class="btn btn-custom d-none d-lg-block">GET A QUOTE</button>
       </nav>
       <!--End Nav  -->
-
-
       <!-- start Header  -->
       <header >
             <div class="container">
@@ -93,7 +97,7 @@
                   <div class="content">
                     <h3>Need Professional </h3>
                     <h1>Expert <span>Gardener</span></h1>
-                    <button type="button" class="btn btn-nav">Contact Now</button>
+                    <button type="button" class="btn btn-custom">Contact Now</button>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-5 col-12">
@@ -108,7 +112,6 @@
               </div>
             </div>
       </header>
-
       <!-- End Header  -->
       <!-- Start works -->
       <section class="Works">
@@ -158,7 +161,6 @@
         </div>
       </section>
       <!-- End works -->
-
       <!-- Start About -->
       <section class="about">
         <div class="container-fluid">
@@ -209,7 +211,7 @@
           <div class="container">
             <div class="title-content">
               <h2>Creat Your Beautiful Garden With Us  Please Call : (+88) 12345</h2>
-              <button class="btn btn-nav">GET A QUOTE</button>
+              <button class="btn btn-custom">GET A QUOTE</button>
             </div>
           </div>
       </section>
@@ -261,7 +263,7 @@
            </div>
            <div class="row">
             <ul class="nav nav-pills mb-3 col-12" id="pills-tab" role="tablist">
-              <li class="nav-item col-lg col-md-12  col-10" role="presentation">
+              <li class="nav-item active col-lg col-md-12  col-10" role="presentation">
                 <a class="nav-link" id="pills-Design-tab" data-toggle="pill" href="#pills-Design" role="tab" aria-controls="pills-Design-tab" aria-selected="false">
                   <i class="fas fa-leaf"></i>
                   Design & Planting</a>
@@ -300,7 +302,7 @@
                         <li><i class="fas fa-check"></i>Leadership &amp; Governance</li>
                         <li><i class="fas fa-check"></i>Leadership &amp; Governance</li>
                       </ul>
-                      <button class="btn btn-nav">Learn More</button>
+                      <button class="btn btn-custom">Learn More</button>
                     </div>
                   </div>
                   <div class="box-img col-md-6 col-12">
@@ -323,7 +325,7 @@
                         <li><i class="fas fa-check"></i>Leadership &amp; Governance</li>
                         <li><i class="fas fa-check"></i>Leadership &amp; Governance</li>
                       </ul>
-                      <button class="btn btn-nav">Learn More</button>
+                      <button class="btn btn-custom">Learn More</button>
                     </div>
                   </div>
                 </div>
@@ -343,7 +345,7 @@
                         <li><i class="fas fa-check"></i>Leadership &amp; Governance</li>
                         <li><i class="fas fa-check"></i>Leadership &amp; Governance</li>
                       </ul>
-                      <button class="btn btn-nav">Learn More</button>
+                      <button class="btn btn-custom">Learn More</button>
                     </div>
                   </div>
                 </div>
@@ -360,7 +362,7 @@
                         <li><i class="fas fa-check"></i>Leadership &amp; Governance</li>
                         <li><i class="fas fa-check"></i>Leadership &amp; Governance</li>
                       </ul>
-                      <button class="btn btn-nav">Learn More</button>
+                      <button class="btn btn-custom">Learn More</button>
                     </div>
                   </div>
                   <div class="box-img col-md-6 col-12">
@@ -383,7 +385,7 @@
                         <li><i class="fas fa-check"></i>Leadership &amp; Governance</li>
                         <li><i class="fas fa-check"></i>Leadership &amp; Governance</li>
                       </ul>
-                      <button class="btn btn-nav">Learn More</button>
+                      <button class="btn btn-custom">Learn More</button>
                     </div>
                   </div>
                 </div>
@@ -506,7 +508,7 @@
                   <div class="form-group">
                     <textarea class="form-control" cols="30" rows="5" placeholder=" Your message Here"></textarea>
                   </div>
-                  <button type="submit" class="btn btn-nav">Submit</button>
+                  <button type="submit" class="btn btn-custom">Submit</button>
                 </form>
               </div>
              </div>
@@ -1013,5 +1015,8 @@
         </div>
        </footer>
        <!-- end footer -->
+      <a class="btn btn-scroll-to-up">
+        <i class="fas fa-chevron-up"></i>
+      </a>
 </body>
 </html>
