add animate lib

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/external/all.min.css">
     <link rel="stylesheet" href="assets/css/external/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/external/animate.css">
     <link rel="stylesheet" href="assets/css/external/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+    <link rel="stylesheet" href="assets/css/main.css"> 
+    
     <script src="assets/js/external/jquery-3.6.0.min.js" defer></script>
     <script src="assets/js/external/bootstrap.bundle.min.js" defer></script>
     <script src="assets/js/external/multi-animated-counter.js" defer></script>
@@ -16,12 +22,12 @@
     <title>planteo</title>
 </head>
 <body>
-    <div class="lodaingPage">
+      <div class="lodaingPage">
       <div class="spinner">
         <div class="double-bounce1"></div>
         <div class="double-bounce2"></div>
       </div>
-    </div>
+      </div>
     <!--Start Nav  -->
       <nav class="navbar navbar-expand-lg ">
         <a class="navbar-brand" href="#">
@@ -95,17 +101,19 @@
               <div class="row">
                 <div class="col-lg-5 col-md-6 col-12">
                   <div class="content">
-                    <h3>Need Professional </h3>
-                    <h1>Expert <span>Gardener</span></h1>
-                    <button type="button" class="btn btn-custom">Contact Now</button>
+                    <h3 class="animate__animated  animate__fadeInDown animate__delay-1s ">
+                      Need Professional </h3>
+                    <h1 class="animate__animated animate__fadeInLeftBig animate__delay-1s ">Expert <span>Gardener</span></h1>
+                    <button type="button" class="btn btn-custom  animate__animated animate__fadeInUp animate__delay-1s
+                    ">Contact Now</button>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-5 col-12">
                   <div class="img-box">
                     <img src="assets/img/main.png" class="main-img"  alt="" srcset="">
-                    <img src="assets/img/sl_2.png" class="plant-img-1" alt="" srcset="">
-                    <img src="assets/img/sl_1.png" class="plant-img-2" alt="" srcset="">
-                    <img src="assets/img/sl_3.png" class="stand-img" alt="" srcset="">
+                    <img src="assets/img/sl_2.png " class="plant-img-1 animate__animated  animate__fadeInDown animate__delay-1s" alt="" srcset="">
+                    <img src="assets/img/sl_1.png" class="plant-img-2 animate__animated  animate__fadeInDown animate__delay-1s" alt="" srcset="">
+                    <img src="assets/img/sl_3.png" class="stand-img  animate__animated animate__fadeIn animate__delay-1s" alt="" srcset="">
                     <img src="assets/img/sl_4.png" class="plant-img-3" alt="" srcset="">
                   </div>
                 </div>
@@ -536,9 +544,9 @@
                           <p>Gardenist</p>
                           <div class="social-icon">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-google"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></i></a>
                           </div>
                         </div>
                       </div>
@@ -553,10 +561,9 @@
                           <p>Gardenist</p>
                           <div class="social-icon">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-google"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></i></a>
                           </div>
                         </div>
                       </div>
@@ -571,10 +578,9 @@
                           <p>Gardenist</p>
                           <div class="social-icon">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-google"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></i></a>
                           </div>
                         </div>
                       </div>
@@ -589,10 +595,9 @@
                           <p>Gardenist</p>
                           <div class="social-icon">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-google"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></i></a>
                           </div>
                         </div>
                       </div>
@@ -920,9 +925,9 @@
                 </div>
                 <div class="social-icon">
                   <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fab fa-google"></i></a>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"><i class="fab fa-linkedin-in"></i></i></a>
                 </div>
               </div>
               <div class="col-lg-3  col-12"">
@@ -1018,5 +1023,7 @@
       <a class="btn btn-scroll-to-up">
         <i class="fas fa-chevron-up"></i>
       </a>
+
+
 </body>
 </html>
