--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             <li class="nav-item  active">
               <a class="nav-link" href="#">Home  <span class="d-lg-none icon-drop"><i class="fas fa-angle-down"></i></span></a>
               <ul class="drop-down-menu">
-                <li class="drop-item"><a class="nav-link" href="#">item 1</a></li>
-                <li class="drop-item"><a class="nav-link" href="#">item 1</a></li>
-                <li class="drop-item"><a class="nav-link" href="#">item 1</a></li>
-                <li class="drop-item"><a class="nav-link" href="#">item 1</a></li>
-                <li class="drop-item"><a class="nav-link" href="#">item 1</a></li>
+                <li class="drop-item"><a class="nav-link" href="#">Home One</a></li>
+                <li class="drop-item"><a class="nav-link" href="#">Home 2</a></li>
+                <li class="drop-item"><a class="nav-link" href="#">Home 3</a></li>
+                <li class="drop-item"><a class="nav-link" href="#">Home 4</a></li>
+                <li class="drop-item"><a class="nav-link" href="#">Home 5</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -57,11 +57,8 @@
             <li class="nav-item ">
                 <a class="nav-link" href="#">Projects <span class="d-lg-none icon-drop"><i class="fas fa-angle-down"></i></span></a>
                 <ul class="drop-down-menu">
-                  <li class="drop-item"><a class="nav-link" href="#">item 1</a></li>
-                  <li class="drop-item"><a class="nav-link" href="#">item 1</a></li>
-                  <li class="drop-item"><a class="nav-link" href="#">item 1</a></li>
-                  <li class="drop-item"><a class="nav-link" href="#">item 1</a></li>
-                  <li class="drop-item"><a class="nav-link" href="#">item 1</a></li>
+                  <li class="drop-item"><a class="nav-link" href="#">Project</a></li>
+                  <li class="drop-item"><a class="nav-link" href="#">Projects Single  </a></li>
                 </ul>
               </li>
             <li class="nav-item ">
@@ -70,11 +67,11 @@
             <li class="nav-item ">
                 <a class="nav-link" href="#">Shop <span class="d-lg-none icon-drop"><i class="fas fa-angle-down"></i></span></a>
                 <ul class="drop-down-menu">
-                  <li class="drop-item"><a class="nav-link" href="#">item 1</a></li>
-                  <li class="drop-item"><a class="nav-link" href="#">item 1</a></li>
-                  <li class="drop-item"><a class="nav-link" href="#">item 1</a></li>
-                  <li class="drop-item"><a class="nav-link" href="#">item 1</a></li>
-                  <li class="drop-item"><a class="nav-link" href="#">item 1</a></li>
+                  <li class="drop-item"><a class="nav-link" href="#">Shop</a></li>
+                  <li class="drop-item"><a class="nav-link" href="#">Shop Single</a></li>
+                  <li class="drop-item"><a class="nav-link" href="#">Cart</a></li>
+                  <li class="drop-item"><a class="nav-link" href="#">Check out</a></li>
+                  <li class="drop-item"><a class="nav-link" href="#">My account</a></li>
                 </ul>
               </li>
               <li class="nav-item ">
@@ -86,10 +83,9 @@
           </ul>
           <div class="d-lg-none icon-social">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-google"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></i></a>
           </div>
         </div>
         <button type="button" class="btn btn-custom d-none d-lg-block">GET A QUOTE</button>
@@ -952,12 +948,12 @@
                   <ul>
                     <div class="card " >
                       <div class="row no-gutters">
-                        <div class="col-4">
+                        <div class="coll-lg-4 col-md-2 col-4">
                           <div class="card-img">
                             <img src="assets/img/post-1.jpg" alt="...">
                           </div>
                         </div>
-                        <div class="col-md-8 col-6">
+                        <div class="col-lg-8 col-md-5 col-6">
                           <div class="card-body">
                             <h5 class="card-title">Spring Lawn Care Tips</h5>
                             <p class="card-text"><i class="far fa-clock"></i> November 19, 2018</p>
@@ -967,12 +963,12 @@
                     </div>
                     <div class="card " >
                       <div class="row no-gutters">
-                        <div class="col-4">
+                        <div class="coll-lg-4 col-md-2 col-4">
                           <div class="card-img">
                             <img src="assets/img/post-1.jpg" alt="...">
                           </div>
                         </div>
-                        <div class="col-md-8 col-6">
+                        <div class="col-lg-8 col-md-5 col-6">
                           <div class="card-body">
                             <h5 class="card-title">Spring Lawn Care Tips</h5>
                             <p class="card-text"><i class="far fa-clock"></i> November 19, 2018</p>
@@ -982,12 +978,12 @@
                     </div>
                     <div class="card " >
                       <div class="row no-gutters">
-                        <div class="col-4">
+                        <div class="coll-lg-4 col-md-2 col-4">
                           <div class="card-img">
                             <img src="assets/img/post-1.jpg" alt="...">
                           </div>
                         </div>
-                        <div class="col-md-8 col-6">
+                        <div class="col-lg-8 col-md-5 col-6">
                           <div class="card-body">
                             <h5 class="card-title">Spring Lawn Care Tips</h5>
                             <p class="card-text"><i class="far fa-clock"></i> November 19, 2018</p>
