modfiy class name in html

--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@
                   <ul>
                     <div class="card " >
                       <div class="row no-gutters">
-                        <div class="coll-lg-4 col-md-2 col-4">
+                        <div class="col-lg-3 col-md-2 col-4">
                           <div class="card-img">
                             <img src="assets/img/post-1.webp" alt="...">
                           </div>
@@ -963,7 +963,7 @@
                     </div>
                     <div class="card " >
                       <div class="row no-gutters">
-                        <div class="coll-lg-4 col-md-2 col-4">
+                        <div class="col-lg-3 col-md-2 col-4">
                           <div class="card-img">
                             <img src="assets/img/post-1.webp" alt="...">
                           </div>
@@ -978,7 +978,7 @@
                     </div>
                     <div class="card " >
                       <div class="row no-gutters">
-                        <div class="coll-lg-4 col-md-2 col-4">
+                        <div class="col-lg-3 col-md-2 col-4">
                           <div class="card-img">
                             <img src="assets/img/post-1.webp" alt="...">
                           </div>
